# Friend-Links

./: .gitignore  main.json  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/scripts/: check_ownership.py  check_url.py  extract_field.py  pr_checker.py  validate_structure.py
.github/workflows/: COMMENT_LOOP_FIX.md  EXECUTION_FIX.md  FIX_NOTICE.md  OPTIMIZATION_NOTICE.md  README.md  TITLE_AND_COMMENT_FIX.md  pr-check.yml
src/: entry.py  worker.py
src/data/: 2x.py  380am_0204.py  __init__.py  g2nnys.py  pr.py  test.py  test_friend.py
